force-app/main/default/objects/LogEntry__c/LogEntry__c.object-meta.xml
<CustomObject>
    <description>Structured diagnostic log entries written by the Logger service. Internal package telemetry.</description>
    <label>Log Entry</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Log Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>