force-app/main/default/objects/LogEntry__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Request id correlating all log entries in one transaction.</description>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>